public/main.css
* {
	box-sizing: border-box;
}

h1, h2, h3, h4, p, input, button {
	color: #3C3241;
	font-family: 'Source Sans Pro', Sans-Serif;
}

ul {
    padding: 0;
    list-style-type: none;
}

li {
	position: relative;
	padding-left: 0;
}

body {
	font-family: 'Sintony', Sans-Serif;
	background-color: #F6F5F6;
	padding: 0;
	margin: 0 auto;
}

.banner {
	z-index: 2;
	text-align: left;
	position: fixed;
	top: 0;
	left: 0;
  width: 100%;
  height: 70px;
	background-color: #3C3241;
}

/* for  color match between logo and h1 'badger' text */
.banner .badger {
	color: #3FB4E5;
}

.banner h1 {
	color: #F0ECE6;
	font-size: 1.9em;
	margin: 0 auto;
	padding: 15px;
	margin-top: -10px;
	margin-left: 63px;
}

.banner p {
	color: #F0ECE6;
	line-height: 0;
	font-size: 0.9em;
	margin: 0 auto;
	margin-left: 78px;
	margin-top: -6px;
}

#burger-icon {
	font-size: 2.4em;
  position: fixed;
  color: #F0ECE6;
	top: 15px;
	right: 20px;
	text-align: right;
	cursor: pointer;
	z-index: 5;
}

.burger-a-wrapper {
	position: fixed;
  color: #F0ECE6;
	top: 15px;
	right: 20px;
	width: 40px;
	height: 38px;
	z-index: 4;
}

/* a-wrappers used to aid tab-navigation accessibility */
.burger-a-wrapper:focus, .burger-a-wrapper:hover, .nav-drop-down-menu-a-wrapper:hover, .nav-drop-down-menu-a-wrapper:focus  {
  background: radial-gradient(circle, #4d4154, #4d4154, #4d4154, #4d4154, #4d4154, #3C3241, #3C3241, #3C3241);
  outline: 1px solid #5D517B;
}

.nav-drop-down-menu {
  position: fixed;
  display: block;
  z-index: 1;
  top: 69px;
  right: 0;
  width: 200px;
  text-align: center; 
  margin: 0 auto;
  color: #F0ECE6;
  border-radius: 2px;
  background-color: #3C3241;
  cursor: pointer;
}

.nav-drop-down-menu p {
	color: #F0ECE6;
	z-index: 3;
	cursor: default;
}

.nav-drop-down-menu li {
	padding: 10px
}

.nav-drop-down-menu-a-wrapper {
	text-decoration: none;
	color: #F0ECE6;
}

.logo {
	position: fixed;
	width: 56px;
	margin-top: 0;
	left: 15px;
	top: 7px;
}

.nav-tabs {
	width: 100%;
}

.nav-tab {
	cursor: pointer;
	display: inline-block;
	background-color: #F1F1F1;
	border-right: 1px #D8D6D9 solid;
	border-bottom: 1px #D8D6D9 solid;
	font-color: #A68799;
	height: 50px;
	width: 50%;
	box-sizing: border-box;
	padding-top: 4px;
}

.nav-tab h3 {
	font-size: 1em;
	margin-top: 10px; 
	text-decoration: none;
}

nav a:hover {
  text-decoration: none;
}

.nav-tab-selected {
	text-decoration: underline;
	background-color: #FFFFFF;
	color: #3C3241;
	border-bottom: 0;
}

.nav-tab-selected:hover {
	text-decoration: underline;
}

.main-nav {
	border-top: 1px solid #D8D6D9;
}

.budget {
	padding-left: 15px !important;
	padding-left: 15px !important;
}

main {
	z-index: 0;
	box-sizing: content-box;
  border: 1px solid #D8D6D9;
  border-top: 0;
	position: relative;
	top: 80px;
	width: 80%;
	max-width: 650px;
	min-width: 310px;
  margin: 0 auto;
  margin-bottom: 5px;
	text-align: center;
	height: 100%;
  max-height: 88vh;
  background-color: #FFFFFF;
  border-radius: 2px;
  overflow-y: auto;
  overflow-x: hidden;
}

/* Central content displayed when user logs in */
.gift-lists {
	margin: 0 auto;
	max-width: 75%;
	padding: 20px;
	padding-top: 0;
}


.gift-lists h3 {
	margin-top: 20px;
	font-size: 1.25em;
}

.gift-lists h4 {
	margin-bottom: 10px;
}

main .nav-tab {
	width: 33.333333%;
}

header p {
	position: fixed;
	bottom: 30px;
	font-weight: normal;
	margin-top: 5px;
	margin-left: 4px;
	margin-bottom: -40px;
}

header p, header a{
	font-size: 0.9em;
	text-align: left;
}

label {
	cursor: pointer;
}

h2 {
	font-size: 1.4em;
	margin-top: 40px;
	line-height: 0.1em;
}

h3 {
	text-decoration: underline;
}

button { 
	cursor: pointer;
	border: none; 
} 

input {
	border: #D8D6D9 1px solid;
	border-radius: 3px;
	height: 30px;
	width: 80%;
	padding-left: 10px;
	padding-right: 10px;
}

input:focus {
    outline: 1px #766F7A solid;
}

button {
	height: 40px;
	width: 80px;
	border-radius: 5px;
	background-color: #E57373;
	color: #FFFFFF;
}

button:focus {
  border: 1px solid #3FB4E5;
  border-radius: 5px;
}

/*Login or Register <section>*/
.login-or-register-container {
	box-sizing: content-box;
  border: 1px solid #D8D6D9;
	position: relative;
	top: 100px;
	max-width: 400px;
	width: 80%;
	min-width: 280px;
  margin: 0 auto;
	text-align: center;
  height: 100%;
  background-color: #FFFFFF;
  border-radius: 2px;
}

.login-or-register-form {
	margin-top: 45px;
}

.login-register-buttons, .edit-panel button {
	height: 35px;
	font-size: 0.9em;
	font-weight: bolder;
	margin: 15px 0 30px 0;
	position: relative;
	width: 80.5%;
}

.login-button, .register-button {
	margin-bottom: 40px;	
}

.login-register-buttons:hover, .login-register-buttons:focus, .edit-panel button:hover, .edit-panel button:focus {
	background-color: #D06868;
	text-decoration: underline;
}

.login-register-label {
	font-size: 0.95em;
	margin-top: 20px;
	text-align: left;
	font-weight: bold;
	width: max-content;
	display: block;
	position: relative;
	left: 45px;
	padding-bottom: 6px;
	cursor: pointer;
}

.login-register-error {
	position: relative;
	color: green;
	margin-top: -20px;
	margin-bottom: 35px;
	left: 50%;
	transform: translate(-50%, -50%);
}

/* Budget <section> */
/* For budget 'progress bar' */
.budget-meter { 
	margin: 0 auto;
	margin-top: 10px;
	margin-bottom: 20px;
	height: 20px;  
	width: 80%;
	max-width: 800px;
	position: relative;
	background: #D8D6D9;
	-moz-border-radius: 25px;
	-webkit-border-radius: 25px;
	border-radius: 25px;
	padding: 5px;
	box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
}

.budget-meter > span {
  display: block;
  height: 100%;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  background-color: #E57373;
  background-image: linear-gradient(
    center bottom,
    rgb(43,194,83) 37%,
    rgb(84,240,84) 69%
  );
  box-shadow: 
    inset 0 2px 9px  rgba(255,255,255,0.3),
    inset 0 -2px 6px rgba(0,0,0,0.4);
  position: relative;
  overflow: hidden;
}


/* Calendar <section> */
iframe {
	margin-bottom: 25px;
}

a, .edit-alt, .js-edit {
	color: #3997BA;
	text-decoration: none;
}

a:hover, a:focus, .edit-alt:hover, .edit-alt:focus, .js-edit:hover, .js-edit:focus {
	text-decoration: underline;
	color: #3FB4E5;
}

/* 'Edit' */
/* <a> wrappers used to aid tab-navigation accessibility*/
.edit {
	position: absolute;
	margin-top: -2px;
	margin-left: 2px; 
	font-weight: bold;
}

.edit i {
	font-size: 1.2em;
	top: 0px;
}

.edit-alt {
	font-size: 1em;
	font-weight: bold;
	cursor: pointer;
}

/* Edit Panel */
.edit-panel {
	text-align: center;
	z-index: 4;
  position: fixed; 
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: #FFFFFF;
  border-radius: 2px;
  width: 95%;
  max-width: 600px;
  height: 90%;
  max-height: 400px;
  overflow: auto;
  padding: 10px 20px 20px 20px;
  border: 1px #D8D6D9 solid;
}

.edit-panel * {
	color: #3C3241;
}

.edit-panel ul {
	text-align: center;
}

.edit-panel .validation-warning {
	position: relative;
	margin: 0 auto;
	top: 18px;
	font-size: 1em;
	line-height: 0;
	margin: 0 auto;
}

.edit-panel-gifts-picked-list {
	margin-bottom:-5px;
}


.ul-title {
	margin-top: -30px;
}

hr {
  border: 0;
  height: 1px;
  background: #F0ECE6;
  background-image: linear-gradient(to right, #F0ECE6, #3C3241, #F0ECE6);
}

.hr-edit {
  width: 40%;
}

.hr-giftlist {
  width: 100%;
  margin:  0 auto;
  margin-top: 30px;
  margin-bottom: 30px;
}

.material-icons, .edit-alt {
	color: #D06868;
}

.material-icons {
	text-decoration: none;
	font-size: 1.4em;
  position: relative;
  top: 4px;
}

.material-icons:hover, .material-icons:focus {
  color: #3FB4E5;
  text-decoration: none !important;
}

.calendar-icon{
	margin-bottom: 25px;
}

.edit-panel button {
	margin: 0 auto;
	margin-top: 2px;
}


.submit-edit {
	margin-top: 30px !important;
}

.edit-panel input {
	color: #3C3241;
}

.gift-picked-label {
	line-height: 2em;
	position: relative;
	display: inline;
	bottom: -5px;
}

.edit-panel p {
	margin-top: 10px;
}

/* Other */
.user-event-name {
	font-weight: bold;
} 

.validation-warning, .login-register-error {
	color: #EC4231;
	width: 90%;
	height: 1em;
	text-align: center;
}


.confirm, .loading-message {
	text-align: center;
	z-index: 3;
	position: fixed;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	background: #FFFFFF;
	min-width: 300px;
	width: 50%;
	max-width: 600px;
	border-radius: 2px;
	padding: 25px;
}

.yes-no-button:hover {
	background-color: #940000;
}

.page-shader {
	display: block;
	position: fixed;
	z-index: 2;
	left: 0;
	top: 0;
	margin: 0 auto;
	padding: 0;
	height: 100%;
	width: 100%;
	background-color: black;
	opacity: 0.6;
}

@media only screen and (max-width: 440px) {
	
	/* Small screens: In edit panel, display 'add' below input */

	.gift-lists, .budget {
		padding: 0px;
	}

  .banner h1 {
  	margin-top: 0px;
  }

  .banner p {
  	display: none;
  }
}

/* Hide calendar on smaller screens - too cramped, so link is provided to external apps */
@media only screen and (max-width: 730px) {
  iframe {
  	visibility: hidden;
  	width: 0px;
  	height: 0px;
  }
}


/* Large screens: prevents top banner details from drifting to extreme edges of page */
@media only screen and (min-width: 1500px) {
	.logo {
		left: 20%;
	}

	.banner {
		padding-left: 20%;
		padding-right: 20%;
	}

  #burger-icon {
  	right: 28%;
  }

  .nav-drop-down-menu {
  	right: 28%;
  } 
}

